--- a/home-management-new.html
+++ b/home-management-new.html
@@ -72,8 +72,7 @@
                     <i class="fas fa-home"></i>
                     <span>Home Management</span>
                 </a>
-                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar"
-                    style="">
+                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manage your homes easily</h6>
                         <a class="collapse-item" href="buttons.html"><i class="fas fa-home"></i> View your homes</a>
@@ -90,7 +89,7 @@
                     <span>User Management</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar" style="">
+                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manage your users easily</h6>
                         <a class="collapse-item" href="utilities-color.html"><i class="fas fa-users"></i> View your
