Main Home Page Implemented

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <li class="nav-item">
         <ul class="nav d-flex align-items-center justify-content-center">
           <li class="p-2"><img src="img/home-icon.png" width="50px"></li>
-          <li class="p-2"><img src="img/floor-icon.png" width="50px"></li>
+          <li class="p-2">
+            <img class="hand" src="img/floor-icon.png" alt="Edit" onmouseover="this.src='img/floor-icon-hover.png';"
+              onmouseout="this.src='img/floor-icon.png';" width="50px" />
+          </li>
         </ul>
       </li>
       <hr class="sidebar-divider">
@@ -35,25 +38,25 @@
           <span class="d-block text-center">Avery</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="img/avery.png" alt="..." class="img-thumbnail">
-            <span class="d-block text-center">Avery</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="img/avery.png" alt="..." class="img-thumbnail">
-              <span class="d-block text-center">Avery</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">
-                <img src="img/avery.png" alt="..." class="img-thumbnail">
-                <span class="d-block text-center">Avery</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <img src="img/avery.png" alt="..." class="img-thumbnail">
-                  <span class="d-block text-center">Avery</span></a>
-              </li>
+        <a class="nav-link" href="#">
+          <img src="img/avery.png" alt="..." class="img-thumbnail">
+          <span class="d-block text-center">Avery</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="img/avery.png" alt="..." class="img-thumbnail">
+          <span class="d-block text-center">Avery</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="img/avery.png" alt="..." class="img-thumbnail">
+          <span class="d-block text-center">Avery</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="img/avery.png" alt="..." class="img-thumbnail">
+          <span class="d-block text-center">Avery</span></a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link" href="#">
