--- a/home-management-new.html
+++ b/home-management-new.html
@@ -20,9 +20,6 @@
     <!-- Custom styles for this template-->
     <link href="http://localhost:3000/css/sb-admin-2.min.css?browsersync=1571559313648" rel="stylesheet">
 
-    <!-- Custom styles for this page -->
-    <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top" data-gr-c-s-loaded="true">
@@ -72,7 +69,8 @@
                     <i class="fas fa-home"></i>
                     <span>Home Management</span>
                 </a>
-                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo"
+                    data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manage your homes easily</h6>
                         <a class="collapse-item" href="buttons.html"><i class="fas fa-home"></i> View your homes</a>
@@ -184,13 +182,7 @@
                         <h1 class="h3 mb-0 text-gray-800">User Management</h1>
                     </div>
 
-                    <!-- Content Row -->
-
-
-                    <!-- Content Row -->
-
                     <div class="row">
-
                         <!-- Area Chart -->
                         <div class="col-xl-12">
                             <div class="card shadow mb-4">
@@ -201,6 +193,55 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                            <thead>
+                                                <tr class="bg-dark text-white">
+                                                    <th>Options</th>
+                                                    <th>Conflicts</th>
+                                                    <th>Dependency</th>
+                                                    <th>Togetherness</th>
+                                                </tr>
+                                            </thead>
+                                            <!-- <tfoot>
+                                                <tr>
+                                                    <th>Name</th>
+                                                    <th>Position</th>
+                                                    <th>Office</th>
+                                                    <th>Age</th>
+                                                </tr>
+                                            </tfoot> -->
+                                            <tbody>
+                                                <tr>
+                                                    <td class="w-25">
+                                                        <select class="form-control" id="exampleFormControlSelect1">
+                                                            <option>Bedroom</option>
+                                                            <option>Bathroom</option>
+                                                            <option>Hall</option>
+                                                            <option>Lobby</option>
+                                                        </select>
+                                                    </td>
+                                                    <td class="w-25">
+                                                        <input type="text" value="Lobby" data-role="tagsinput"
+                                                            class="form-control col-12" />
+                                                    </td>
+                                                    <td class="w-25">
+                                                        <input type="text" value="Window, Door" data-role="tagsinput"
+                                                            class="form-control col-12" />
+                                                    </td>
+                                                    <td class="w-25">
+                                                        <input type="text" value="Wardroob" data-role="tagsinput"
+                                                            class="form-control col-12" />
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td colspan="4"><button class="btn btn-primary float-right"><span class="fa fa-plus pr-2"></span>Add Row</button></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+
+
                                     <form>
                                         <div class="form-row">
                                             <div class="form-row col-md-8">
@@ -248,9 +289,10 @@
                                                             feedback
                                                         </div>
                                                     </div>
-                                                    <h3 class="h5 grad-row p-2 text-white my-2">Profile Picture</h3>
+                                                    <h3 class="h5 grad-row p-2 text-white my-2 rounded">Profile Picture
+                                                    </h3>
                                                     <div class="col-lg-12 mx-auto p-0 o-hidden">
-                                                            <img src="img/lexinton.png" alt="..." class="img-thumbnail">
+                                                        <img src="img/lexinton.png" alt="..." class="img-thumbnail">
                                                     </div>
 
                                                 </div>
@@ -349,12 +391,8 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
 
-    <!-- Page level plugins -->
-    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-    <!-- Page level custom scripts -->
-    <script src="js/demo/datatables-demo.js"></script>
+    <!-- Page level custom script for Tags Input -->
+    <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
 
 
 
