--- a/finish.html
+++ b/finish.html
@@ -92,11 +92,19 @@
           <!-- Page Heading -->
           <div class="row">
             <div class="col-xl-4 col-lg-5 col-md-6">
-              <h1 class="h3 text-success">Congratulations</h1>
+              <h1 class="h3 text-success">Congratulations
+                <a href="#" class="btn btn-primary btn-circle btn-sm float-right mx-2">
+                  <i class="fas fa-share"></i>
+                </a>
+                <a href="#" class="btn btn-primary btn-circle btn-sm float-right mx-2">
+                    <i class="fas fa-download"></i>
+                  </a>
+              </h1>
+
               <hr>
-              <div class="d-flex align-items-center justify-content-center">
-                <h1 class="h3 text-primary">Avery Forbes Capretto Homes</h1>
-                <div class="fp-price">
+              <div class="d-flex align-items-center justify-content-between">
+                <h1 class="h3 text-primary">Avery Forbes</h1>
+                <div class="fp-price ">
                   <span class="pricetag">
                     <small>Starts From</small>
                     $303,900 </span>
@@ -128,8 +136,8 @@
               </ul>
               <h1 class="h4 text-white bg-primary p-2 text-center">Floor Plan</h1>
               <ul class="navbar-nav mr-auto">
-                <li class="nav-link with-arrow text-info text-nowrap hand noSelect" data-toggle="collapse" data-target="#floor1"
-                  aria-expanded="false" aria-controls="floor1">
+                <li class="nav-link with-arrow text-info text-nowrap hand noSelect" data-toggle="collapse"
+                  data-target="#floor1" aria-expanded="false" aria-controls="floor1">
                   <i class="fas fa-bed pr-2 "></i>Floor 1
                 </li>
               </ul>
